# libpharao

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
cmake/: symbolsDivide.map  symbolsFree.map  symbolsImpure.map  symbolsMalloc.map  symbolsMisc.map  symbolsSignal.map  symbolsSignedDivide.map  symbolsStdio.map  symbolsString.map
include/pharao/: print.h  printer.hpp  string.h
src/: impure.cpp  malloc.cpp  print.cpp  printer.cpp  stdio.cpp  string.cpp
tests/: CMakeLists.txt  test_main.cpp  test_print.cpp
